# bevy_world_seed

./: .gitignore  Cargo.toml  FEATURE_PLACEMENT.md  README.md
.github/workflows/: test_default.yml  test_no_default_features.yml
assets/curves/: continentallness.curve.ron  peaks_and_valleys.curve.ron
assets/shaders/: terrain.wgsl
assets/textures/: TEXTURES.MD  brown_mud_leaves_01_nor_gl_2k.dds  cracked_concrete_diff_1k.dds  cracked_concrete_nor_gl_1k.dds
assets/textures/single_color/: dirt.dds  grass.dds  sand.dds  stone.dds
benches/: math.rs
examples/: basic_setup.rs  many_tiles.rs  terrain_collider.rs
src/: debug_draw.rs  easing.rs  feature_placement.rs  lib.rs  main.rs  material.rs  meshing.rs  modifiers.rs  noise.rs  snap_to_terrain.rs  terrain.rs  terrain.v.wgsl  terrain.wgsl  utils.rs
tests/: modifiers.rs
