[package]
name = "bevy_world_seed"
version = "0.1.0"
edition = "2021"
exclude = ["/assets"]
keywords = ["gamedev"]
categories = ["game-development", "terrain", "bevy", "procedural-generation"]

authors = ["TheGrimsey"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[features]
debug_draw = ["rendering", "bevy/bevy_gizmos"]
rendering = ["bevy/bevy_render", "bevy/bevy_pbr", "bevy/bevy_asset"]
default = ["rendering", "debug_draw"]

[dependencies]
bevy = { version = "0.14", default-features = false }
bevy_lookup_curve = { version = "0.5", default-features = false, features = ["bevy_asset"] }
fixedbitset = "0.5"
noise = { version = "0.9", default-features = false }

[dev-dependencies]
bevy = { version = "0.14", features = ["jpeg", "dds", "asset_processor"] }

# Benchmarks.
criterion = { version = "0.5" }

# Editor used in many_tiles.
bevy_lookup_curve = { version = "0.5", default-features = false, features = ["bevy_asset", "bevy_reflect", "editor_bevy"] }
bevy_editor_pls = { git = "https://github.com/soraxas/bevy_editor_pls.git", branch = "feat-bump-version"}

# Used in `terrain_collider` example.-
bevy_rapier3d = "0.27.0"

[[example]]
name = "basic_setup"
required-features = ["rendering"]

[[example]]
name = "many_tiles"
required-features = ["rendering"]

[[example]]
name = "terrain_collider"
required-features = ["rendering"]

[[bench]]
name = "math"
harness = false
