[package]
name = "bevy_world_seed"
version = "0.1.0"
edition = "2021"
exclude = ["/assets"]
keywords = ["gamedev"]
categories = ["game-development", "terrain", "bevy", "procedural-generation"]

authors = ["TheGrimsey"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[features]
count_samples = []
debug_draw = ["rendering", "bevy/bevy_gizmos", "dep:bevy_color", "dep:bevy_gizmos"]
rendering = ["dep:bevy_render", "dep:bevy_pbr", "dep:bevy_image", "dep:bevy_tasks"]
serialize = ["dep:serde"]
default = ["rendering", "debug_draw"]

[dependencies]
bevy_app = { version = "0.15" }
bevy_asset = { version = "0.15" }
bevy_math = { version = "0.15" }
bevy_ecs = { version = "0.15" }
bevy_transform = { version = "0.15" }
bevy_hierarchy = { version = "0.15" }
bevy_reflect = { version = "0.15" }
bevy_log ={ version = "0.15" }
bevy_derive = { version = "0.15" }
bevy_utils = { version = "0.15" }

bevy_gizmos = { version = "0.15", optional = true }
bevy_render = { version = "0.15", optional = true }
bevy_image = { version = "0.15", optional = true }
bevy_pbr = { version = "0.15", optional = true }
bevy_color = {version = "0.15", optional = true }
bevy_tasks = { version = "0.15", optional = true }

bevy_lookup_curve = { version = "0.6", default-features = false, features = ["bevy_asset"] }
fixedbitset = "0.5"
noise = { version = "0.9", default-features = false }
serde = { version = "1", optional = true }
turborand = "0.10.1"

[dev-dependencies]
bevy = { version = "0.15", features = ["jpeg", "dds", "asset_processor", "bevy_render"] }

# Benchmarks.
criterion = { version = "0.5" }

# Editor used in many_tiles.
bevy_lookup_curve = { version = "0.6", default-features = false, features = ["bevy_asset", "bevy_reflect", "editor_bevy"] }
bevy_editor_pls = { git = "https://github.com/onkoe/bevy_editor_pls.git" }

# Used in `terrain_collider` example.-
bevy_rapier3d = "0.28.0"

[[example]]
name = "basic_setup"
required-features = ["rendering"]

[[example]]
name = "many_tiles"
required-features = ["rendering"]

[[example]]
name = "terrain_collider"
required-features = ["rendering"]

[[bench]]
name = "math"
harness = false
